<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:background="@color/default_background"
    >

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_activity_loginButton"
        app:layout_constraintEnd_toEndOf="@+id/passwordInputWrapper"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputWrapper"
        android:backgroundTint="@color/default_button_background_color"
        android:textColor="@color/default_font_color"
        />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/login_activity_registerButton"
        app:layout_constraintEnd_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputWrapper"
        android:backgroundTint="@color/default_button_background_color"
        android:textColor="@color/default_font_color"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userInputWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/login_user_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44"
        app:startIconContentDescription="@string/login_user_hint"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:boxBackgroundColor="@color/default_input_field_background"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInputWrapper"
        app:startIconContentDescription="@string/login_password_hint"
        app:startIconDrawable="@drawable/ic_password_24"
        app:endIconMode="password_toggle"
        app:boxBackgroundColor="@color/default_input_field_background"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>