<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ColorPickerDialog"
    android:background="@color/default_background"
    >

    <TextView
        android:id="@+id/dialog_color_picker_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/color_picker_dialog_title"
        android:textSize="30sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/colorPickerView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="10dp"
        android:textColor="@color/default_font_color"
        />

    <com.skydoves.colorpickerview.ColorPickerView
        android:id="@+id/colorPickerView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_color_picker_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="20dp"
        />

    <com.skydoves.colorpickerview.sliders.AlphaSlideBar
        android:id="@+id/alphaSlideBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:selector_AlphaSlideBar="@drawable/wheel"
        app:borderColor_AlphaSlideBar="@android:color/darker_gray"
        app:borderSize_AlphaSlideBar="5"
        app:layout_constraintTop_toBottomOf="@id/colorPickerView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/brightnessSlide"

        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <com.skydoves.colorpickerview.sliders.BrightnessSlideBar
        android:id="@+id/brightnessSlide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:selector_BrightnessSlider="@drawable/wheel"
        app:borderColor_BrightnessSlider="@android:color/darker_gray"
        app:borderSize_BrightnessSlider="5"
        app:layout_constraintTop_toBottomOf="@id/alphaSlideBar"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <ImageView
        android:id="@+id/color_picker_dialog_new_color"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/brightnessSlide"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/color_picker_dialog_confirm_button"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/background_circle"
        android:backgroundTintMode="multiply"
        android:backgroundTint="@color/default_input_field_background"

        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/color_picker_dialog_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/color_picker_dialog_cancel_button"
        app:layout_constraintTop_toBottomOf="@id/color_picker_dialog_new_color"
        app:layout_constraintRight_toLeftOf="@id/color_picker_dialog_confirm_button"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"

        style="?attr/materialButtonOutlinedStyle"
        android:backgroundTint="@color/default_button_background_color"
        android:textColor="@color/default_font_color"
        />

    <Button
        android:id="@+id/color_picker_dialog_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/color_picker_dialog_confirm_button"
        app:layout_constraintTop_toBottomOf="@id/color_picker_dialog_new_color"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"

        style="?attr/materialButtonOutlinedStyle"
        android:backgroundTint="@color/default_button_background_color"
        android:textColor="@color/default_font_color"
        />

</androidx.constraintlayout.widget.ConstraintLayout>